fix: mobile Safari on iOS input

--- a/components/Search/Search.module.css
+++ b/components/Search/Search.module.css
@@ -237,7 +237,7 @@
   }
 
   .searchInput {
-    padding: 0.375rem 0.85rem 0.375rem 1.25rem;
+    padding: 0.25rem 0.75rem 0.25rem 1.25rem;
   }
   .searchButton {
     height: 2rem;
